gitops/base/monitoring/grafana-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: sarraf-dev
spec:
  parentRefs:
  - name: sarraf-gateway
    sectionName: https
  hostnames:
  - grafana.omerops.com
  rules:
  - backendRefs:
    - name: grafana-service
      port: 80
